********************************************************
CHANGELOG
********************************************************

IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
*********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		

December 12th 2015
******************

- Added Paranoia Text & File Encryption 12R1C

December 11th 2015
******************

- Added Gostcrypt 1.0 and TrueCrypt 7.2

December 8th 2015
******************

- Temporarily removed OnionShare until it works with TAILS again
- Bugfixes

November 27th 2015
******************

- Updated Academic Signature to version v53

November 16th 2015
******************

- Added Horcrux backup/restore script

November 11th 2015
******************

- Added AIDE 0.16 and Zulucrypt 4.77 packages

November 7th 2015
*****************

- Added Rootkit Hunter 1.4.2 package

November 5th 2015
*****************

- Signature verification of package downloads and functional verification on TAILS 1.7 

October 30th 2015  INITIAL RELEASE 0.1a
*****************  ********************

"TAILS Candy" provides a set of on-demand installation/update scripts for
OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus,
Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage,
Shamir's Secret Sharing Scheme, Tor Messenger (beta), Armory, Rootkit Hunter,
AIDE, Horcrux, GostCrypt, TrueCrypt,Veracrypt and Zulucrypt.

Additional features:

1) Create a persistent autostart entry in ~/.config/autostart that will be
executed every time you log in to TAILS. You can customise the Customisations.sh
script it runs and which can be found in the ~/Persistent/Packages folder.

2) Disable TAILS Gnome Keyring Daemon SSH-support by overriding default
autostart. This is done by creating another ~/.config/autostart item which is
a copy of the one in /etc/xdg/autostart but with Autostart set to false.