@@ -5,6 +5,11 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+December 16th 2015
+******************
+
+- Added AESCrypt 3.10, Jitsi 2.8 and Mumble Client 1.2.3
+
 December 12th 2015
 ******************
 
@@ -53,7 +58,8 @@ October 30th 2015  INITIAL RELEASE 0.1a
 OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus,
 Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage,
 Shamir's Secret Sharing Scheme, Tor Messenger (beta), Armory, Rootkit Hunter,
-AIDE, Horcrux, GostCrypt, TrueCrypt,Veracrypt and Zulucrypt.
+AIDE, Paranoia File & Text Encryption, Jitsi, AESCrypt, Mumble, Horcrux,
+GostCrypt, TrueCrypt, Veracrypt and Zulucrypt.
 
 Additional features:
 
